# forge3d

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .tmp_a11_check.py  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  GEMINI.md  MANIFEST.in  PATCHPLAN.md  PLAN.json  PR_BODY.md  PR_BODY_A12.md  PR_BODY_A14.md  QUESTIONS.md  README.md  ROADMAP.md  SECURITY.md  VALIDATION_SUMMARY.md  WORKSTREAM_Q_AUDIT.md  WORKSTREAM_S_AUDIT.md  __tmp_pyi.txt  analyze_image.py  build.rs  build_err.txt  build_err_full.txt  build_log.txt  build_warn_full.txt  city2graph.py  conftest.py  debug_ortho.py  developer.md  errors.txt  f1_extrusion.npy  p0.md  p1.md  p2.md  (+47 more)
.cargo/: config.toml
.claude/: CLAUDE.md  COMPONENT_TEMPLATE.md  Makefile  hooks.md  settings.json  settings.local.json
.specify/: feature.json
assets/: README.md  lux_population.gpkg
benches/: f3dz_bench.rs
ci/: run_benches.sh
cmake/: ForgeConfig.cmake  README.md
data/: generate_palettes.py  pol_pd_2020_1km_UNadj.tif  terrain_256.rgba
diag_out/: device_diagnostics.json
docs/: 2026-03-10-developer-platform-plan.md  2026-03-11-plan-review-phase1-phase2.md  3d-map-rendering-quality-blender-outmatch-plan.md  CLAUDE.md  CLAUDE_UPDATE_REPORT.md  P1_ACCEPTANCE.md  PLAN.json  QUESTIONS.md  REPORT.md  _inventory_claude.json  anamnesis.md  api_reference.rst  build.md  codebase-refactor.md  codex-p0-p1-blender-plan-implementation-prompt.md  codex-p2-p3-blender-plan-implementation-prompt.md  color_management.md  colormaps.md  conf.py  debug_normal_contract.md  denoiser_implementation.md  errors.txt  examples_guide.rst  fable-5-3d-map-rendering-quality-plan-prompt.md  fable-5-forge3d-skill-creation-prompt.md  fable-5-p0-p1-blender-plan-implementation-audit-prompt.md  flake_debug_contract.md  forge3d-recommended-skills-audit.md  gore_p5_preset.md  hdr_offscreen.md  high_quality_rendering.md  implement.md  index.rst  interactive_viewer.rst  interop_zero_copy.rst  italy-forest-pt-hdr-mood-diagnosis-2026-07-13.md  launch-blog.md  memory_budget.md  memory_budget.rst  normal_mapping.md  (+60 more)
examples/: 3d_land_cover.py  CLAUDE.md  README.md  _import_shim.py  _m_3d_preview.py  _png.py  accel_lbvh_refit.rs  adaptive_subdivision.py  advanced_terrain_shadows_pbr.py  async_compute_prepass.py  barcelona_travel_time_3d.py  belgium_bivariate_climate_map.py  blender_quality_demo.py  bloom_demo.py  bosnia_terrain_landcover_viewer.py  brdf_gallery.py  brdf_gallery_principled.py  bryce_canyon_storm_timelapse.py  buildings_viewer_interactive.py  bundle_viewer_interactive.py  bundles_demo.py  california_cigar_smoke_demo.py  california_fire_smoke_effect.py  california_wildfire_smoke_video.py  camera_animation_demo.py  cartopy_overlay.py  check_gallery.py  clipmap_demo.py  cloud_shadows_demo.py  clouds_demo.py  cmake_integration.py  cog_streaming_demo.py  colorado_rem_forge3d.py  colormap_dem.py  compressed_texture_demo.py  contour_overlay_demo.py  csm_demo.py  csm_depth_clip_demo.py  dask_ingest_demo.py  datashader_overlay_demo.py  (+188 more)
examples/cmake_integration/: CMakeLists.txt  README.md  cpp_example.cpp
logs/: .3c2cf94182465f0d10df58878528dd39234a1134-audit.json  .9a9fb3a1aee4abd4cecd121a192f7ef77e352837-audit.json  .f1bf37787b2c7ace8dcb1b483bab133f658b3b7d-audit.json  buildings_gallery_obj.mtl  buildings_true3d.mtl  ci-job-67630963692.html  ci-job-67630963726.html  publish-job-67476307894.html
new_scene.forge3d/: manifest.json
presets/: p5_gore_shader_only.json  p6_gore_detail_normals.json
python/: CLAUDE.md  README.md
reports/: a5_plan.json  a6_plan.json  a8_plan.json  audit_A.md  audit_I.md  audit_N.md  audit_N_matrix.csv  audit_O.md  audit_O_matrix.csv  audit_P.md  audit_P_matrix.csv  audit_Q.md  audit_Q_matrix.csv  audit_R.md  audit_R_matrix.csv  audit_S.md  audit_S_matrix.csv  audit_T.md  audit_T_matrix.csv  audit_U.md  audit_U_matrix.csv  audit_V.md  audit_V_matrix.csv  audit_W.md  audit_W_matrix.csv  audit_summary.txt  csv_hygiene.md  csv_hygiene_N.md  csv_hygiene_O.md  csv_hygiene_P.md  csv_hygiene_Q.md  csv_hygiene_R.md  csv_hygiene_S.md  csv_hygiene_T.md  csv_hygiene_U.md  csv_hygiene_V.md  csv_hygiene_W.md  q_lod_metrics.json  r1_cmap.json  r3_norms.json  (+9 more)
scripts/: ai_orchestrator.py  ai_orchestrator_xml.py  assert_junit_zero_skips.py  check_anamnesis_portability.py  check_determinism_hashes.py  check_p5_1.py  check_public_funnel.py  ci_pytest_lane.py  compare_ibl_images.py  compare_images.py  dd.rs.in  detail_normals.py  diag_debug_mode.py  gen_gallery_images.py  generate_audit_snapshot.py  generate_dd.py  generate_debug_grid.py  generate_flake_baseline.py  generate_golden_images.py  generate_ibl_diff.py  generate_license_keypair.py  generate_milestone2_artifacts.py  generate_milestone3_artifacts.py  generate_milestone_a.py  generate_milestone_b.py  generate_milestone_c.py  generate_milestone_d.py  generate_p5_render.py  generate_p5_ssao_artifacts.py  histogram_match.py  hydrate_lfs_from_media.py  install_compatible_wheel.py  p5_golden.bat  p5_golden.sh  p6_gore_range_render.py  record_brdf_goldens.sh  record_p7_goldens.py  regenerate_gallery.py  render_terrain  run_dupla_proof.py  (+19 more)
shaders/: bloom_blur_h.wgsl  bloom_blur_v.wgsl  bloom_brightpass.wgsl  csm.wgsl  extrusion.wgsl  hzb_build.wgsl  impostor_atlas.wgsl  moment_generation.wgsl  pbr.wgsl  planar_reflections.wgsl  postprocess_tonemap.wgsl  shadow_map.wgsl  shadow_sample.wgsl  shadows.wgsl  ssao.wgsl  ssgi.wgsl  ssr.wgsl  terrain_drape.wgsl  terrain_drape_shadow.wgsl
src/: CLAUDE.md  camera.rs  colormap.rs  colormap1d.rs  context.rs  device_caps.rs  error.rs  gpu.rs  grid.rs  ibl_wrapper.rs  lib.rs  material_set.rs  overlay_layer.rs  renderer.rs  session.rs  shader_sources.rs  terrain.rs  terrain_camera.rs  terrain_render_params.rs  terrain_renderer.rs  terrain_stats.rs  transforms.rs
sweep_out/: frames_e1_page_table.csv  frames_e1e_async.csv  frames_e1f_pool.csv  frames_e1g_prefetch.csv  frames_e1h_overlay.csv  frames_e1k_coarse.csv  frames_e1k_fine.csv  frames_peb_0p5.csv  frames_peb_1p0.csv  frames_peb_1p5.csv  frames_peb_2p0.csv  (+2 more)
(+3181 files in other folders)
