[package]
name = "forge3d"
version = "1.11.0"
edition = "2021"
autoexamples = false

[lib]
name = "forge3d"
# Build both a normal Rust library and a Python extension when requested.
# The extension is only meaningful when feature `extension-module` is enabled.
crate-type = ["lib", "cdylib"]

# A2-BEGIN:cargo-features
[features]
# Keep defaults minimal so `cargo build` doesn't require Python linkage.
default = ["images"]
# Enable this when building the Python extension (maturin will pass this feature).
extension-module = ["pyo3/extension-module"]
# Optional async/double-buffered readback (R9)
async_readback = ["dep:tokio"]
terrain_spike = []
weighted-oit = []
wsI_bigbuf = []
wsI_double_buf = []
# Quiet cfg warnings in formats when unused
exr = []
# Workstream N: Advanced Rendering Systems
enable-pbr = []
enable-ibl = []
enable-csm = []
enable-tbn = []
enable-normal-mapping = ["enable-tbn"]
enable-hdr-offscreen = []
enable-render-bundles = []
# GPU instancing experimental flag (no-op stub for now)
enable-gpu-instancing = []
# P0-03: Renderer config plumbing (no shader/pipeline changes)
enable-renderer-config = []
# Workstream O: Resource & Memory Management
enable-memory-pools = []
enable-staging-rings = []
# A14: AOV image format support
images = ["dep:exr"]
# P3: Cloud Optimized GeoTIFF streaming
cog_streaming = ["dep:reqwest", "dep:async-trait", "dep:tokio", "dep:flate2"]
# A2-END:cargo-features

[dependencies]
# Do NOT enable pyo3's extension-module by default; gate it via the Cargo feature above.
# Enable `macros` so procedural attributes like #[pyclass], #[pymethods], and #[pyo3(signature=..)] work when the extension is built.
pyo3  = { version = "0.21.2", features = ["abi3-py38", "macros"] }
numpy = "0.21"
ndarray = "0.15"
wgpu = "0.19"
winit = "0.29"
pollster = "0.3"
bytemuck = { version = "1", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png"] }
tiff = "0.9"
exr = { version = "1.72", optional = true }
glam = "0.24"
thiserror = "1"
once_cell = "1"
half = "2.3"
lyon_tessellation = "1.0"
lyon_path = "1.0"
lyon_geom = "1.0"
ttf-parser = "0.20"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync"], optional = true }
futures-intrusive = "0.5"
env_logger = "0.10"
anyhow = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gltf = { version = "1.3", features = ["import"] }
sha2 = "0.10"
rstar = "0.11"
# P5: LAS/LAZ point cloud support
las = { version = "0.8", features = ["laz"] }
# P3: COG streaming dependencies (optional)
reqwest = { version = "0.12", features = ["stream", "rustls-tls"], optional = true }
async-trait = { version = "0.1", optional = true }
flate2 = { version = "1.0", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync"] }
env_logger = "0.10"
sha2 = "0.10"

[[bin]]
name = "policies"
path = "bench/upload_policies/policies.rs"
required-features = ["async_readback"]

[[example]]
name = "gi_showcase"
path = "examples/gi_showcase.rs"

[[example]]
name = "interactive_viewer"
path = "examples/interactive_viewer.rs"

[profile.release]
codegen-units = 1
lto = "thin"

# Optimized profile for Python wheel builds
[profile.release-lto]
inherits = "release"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
