[package]
name = "forge3d"
version = "1.21.0"
edition = "2021"
autoexamples = false
description = "GPU-accelerated 3D terrain rendering for Python and Rust"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/milos-agathon/forge3d"
homepage = "https://forge3d.dev"
documentation = "https://milos-agathon.github.io/forge3d/"

[lib]
name = "forge3d"
# Build both a normal Rust library and a Python extension when requested.
# The extension is only meaningful when feature `extension-module` is enabled.
crate-type = ["lib", "cdylib"]

# A2-BEGIN:cargo-features
[features]
# Keep defaults minimal so `cargo build` doesn't require Python linkage.
default = ["images", "enable-gpu-instancing"]
# Enable this when building the Python extension (maturin will pass this feature).
extension-module = ["pyo3/extension-module"]
# Optional async/double-buffered readback (R9)
async_readback = ["dep:tokio"]
terrain_spike = []
weighted-oit = []
wsI_bigbuf = []
wsI_double_buf = []
# Quiet cfg warnings in formats when unused
exr = []
# Workstream N: Advanced Rendering Systems
enable-pbr = []
enable-ibl = []
enable-csm = []
enable-tbn = []
enable-normal-mapping = ["enable-tbn"]
enable-hdr-offscreen = []
enable-render-bundles = []
# GPU instancing experimental flag (no-op stub for now)
enable-gpu-instancing = []
# P0-03: Renderer config plumbing (no shader/pipeline changes)
enable-renderer-config = []
# Workstream O: Resource & Memory Management
enable-memory-pools = []
enable-staging-rings = []
# A14: AOV image format support
images = ["dep:exr"]
# P2.2: LAZ decompression in COPC reader
copc_laz = ["dep:laz"]
# P3: Cloud Optimized GeoTIFF streaming
cog_streaming = ["dep:reqwest", "dep:async-trait", "dep:tokio", "dep:flate2"]
# P3-reproject: On-the-fly CRS reprojection via PROJ
proj = ["dep:proj"]
# A2-END:cargo-features

[dependencies]
# Do NOT enable pyo3's extension-module by default; gate it via the Cargo feature above.
# Enable `macros` so procedural attributes like #[pyclass], #[pymethods], and #[pyo3(signature=..)] work when the extension is built.
pyo3  = { version = "0.21.2", features = ["abi3-py310", "macros", "multiple-pymethods"] }
numpy = "0.21"
ndarray = "0.15"
wgpu = "0.19"
winit = "0.29"
pollster = "0.3"
bytemuck = { version = "1", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png"] }
tiff = "0.9"
exr = { version = "1.72", optional = true }
glam = "0.24"
thiserror = "1"
once_cell = "1"
half = "2.3"
lyon_tessellation = "1.0"
lyon_path = "1.0"
lyon_geom = "1.0"
ttf-parser = "0.20"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync"], optional = true }
futures-intrusive = "0.5"
env_logger = "0.10"
anyhow = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gltf = { version = "1.3", features = ["import"] }
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["std"] }
rstar = "0.11"
# P5: LAS/LAZ point cloud support
las = { version = "0.8", features = ["laz"] }
# P2.2: Direct laz crate for COPC chunk decompression (optional, feature-gated)
laz = { version = "0.9", optional = true }
# P3: COG streaming dependencies (optional)
reqwest = { version = "0.12", features = ["stream", "rustls-tls"], optional = true }
async-trait = { version = "0.1", optional = true }
flate2 = { version = "1.0", optional = true }
# P3-reproject: CRS transformation via PROJ (optional, feature-gated)
proj = { version = "0.27", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync"] }
env_logger = "0.10"
sha2 = "0.10"

[[bin]]
name = "policies"
path = "bench/upload_policies/policies.rs"
required-features = ["async_readback"]

[lints.clippy]
# Existing repo-wide backlog quarantined so `cargo clippy -- -D warnings`
# can fail on newly introduced lints instead of the historical baseline.
assign_op_pattern = "allow"
bind_instead_of_map = "allow"
clone_on_copy = "allow"
collapsible_else_if = "allow"
collapsible_if = "allow"
derivable_impls = "allow"
doc_overindented_list_items = "allow"
empty_line_after_doc_comments = "allow"
excessive_precision = "allow"
explicit_counter_loop = "allow"
field_reassign_with_default = "allow"
get_first = "allow"
identity_op = "allow"
if_same_then_else = "allow"
inherent_to_string = "allow"
int_plus_one = "allow"
io_other_error = "allow"
iter_cloned_collect = "allow"
large_enum_variant = "allow"
let_and_return = "allow"
manual_clamp = "allow"
manual_contains = "allow"
manual_div_ceil = "allow"
manual_map = "allow"
manual_pattern_char_comparison = "allow"
manual_range_contains = "allow"
manual_range_patterns = "allow"
manual_rotate = "allow"
manual_slice_size_calculation = "allow"
manual_strip = "allow"
map_clone = "allow"
map_identity = "allow"
match_single_binding = "allow"
mixed_attributes_style = "allow"
needless_borrow = "allow"
needless_borrows_for_generic_args = "allow"
needless_option_as_deref = "allow"
needless_range_loop = "allow"
needless_return = "allow"
needless_update = "allow"
new_without_default = "allow"
nonminimal_bool = "allow"
only_used_in_recursion = "allow"
print_literal = "allow"
ptr_arg = "allow"
question_mark = "allow"
redundant_closure = "allow"
redundant_field_names = "allow"
should_implement_trait = "allow"
single_match = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
uninlined_format_args = "allow"
unnecessary_cast = "allow"
unnecessary_map_or = "allow"
unnecessary_min_or_max = "allow"
useless_conversion = "allow"
wrong_self_convention = "allow"

[profile.release]
codegen-units = 1
lto = "thin"

# Optimized profile for Python wheel builds
[profile.release-lto]
inherits = "release"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
