[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "forge3d"
version = "0.5.0"
description = "forge3d: Rust/WebGPU core with PyO3 bindings"
requires-python = ">=3.8"
readme = "README.md"
license = { text = "Apache-2.0 OR MIT" }
authors = [{ name = "forge3d authors" }]

[tool.maturin]
bindings = "pyo3"
python-source = "python"
module-name = "forge3d._forge3d"